--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "author": "ching",
   "license": "ISC",
   "dependencies": {
+    "@openai/agents": "^0.1.0",
     "dotenv": "^17.2.1",
     "js-tiktoken": "^1.0.21",
-    "openai": "^5.12.2"
+    "openai": "^5.12.2",
+    "zod": "^3.25.76"
   }
 }
