--- a/RAG/docker-compose.yml
+++ b/RAG/docker-compose.yml
@@ -1,5 +1,25 @@
 services:
-    qdrant:
-        image: qdrant/qdrant
-        ports:
-            - "6333:6333"
+  qdrant:
+    image: qdrant/qdrant
+    ports:
+      - "6333:6333"
+
+  neo4j:
+    image: neo4j:latest
+    container_name: neo4j
+    ports:
+      - "7474:7474"
+      - "7687:7687"
+    volumes:
+      - neo4j_data:/data
+    environment:
+      - NEO4J_AUTH=neo4j/test@123
+      - NEO4JLABS_PLUGINS=["apoc"]
+      - NEO4J_dbms_security_procedures_unrestricted=apoc.*,apoc.meta.*
+      - NEO4J_dbms_security_procedures_allowlist=apoc.*,apoc.meta.*
+      - NEO4J_apoc_import_file_enabled=true
+      - NEO4J_apoc_export_file_enabled=true
+      - NEO4J_apoc_import_file_use_neo4j_config=true
+
+volumes:
+  neo4j_data:
